[project]
name = "reappurpose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.10",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.24",
    "uuid>=1.30",
]
