[project]
name = "reappurpose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "fastapi[standard]>=0.115.11",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
    "uuid>=1.30",
]
